--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,7 +1,33 @@
-﻿
+﻿@model IEnumerable<Category>;
 @{
     ViewData["Title"] = "Category";
 }
 
-<h1>Category Index</h1>
-
+<section class="category-page container">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-primary">Category List</h2>
+        </div>
+        <div class="col-6 text-end">
+            <a class="btn btn-outline-primary" asp-controller="Category" asp-action="Create"><i class="bi bi-plus-square-fill"></i> Create New Category</a>
+        </div>
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>Category Name</th>
+                    <th>Display Order</th>
+                    <th>Control</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var obj in Model){
+                    <tr>
+                        <td>@obj.Name</td>
+                        <td>@obj.DisplayOrder</td>
+                        <td></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</section>
